--- a/.exemplo.env
+++ b/.exemplo.env
@@ -1,4 +1,4 @@
-PORT=
-MONGODB_URI=
-TOKEN_SIGN_SECRET=
-REACT_APP_URL=
+PORT=4000
+MONGODB_URI=mongodb://localhost:27017/kols-api
+TOKEN_SIGN_SECRET=B~!hY%r;(jBfk,6A
+REACT_APP_URL=http://localhost:3000
